src/tests/testfiles/binary-operators/24.txt
testfiles/binary-operators/24.c:2:5: error: invalid operands to logical 'and' (have 'float' and 'float', need 'int' and 'int')
1.6 && 0.6;
^
